<resources>
    <string name="app_name">Web News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bbc">BBC</string>
    <string name="ndtv">NDTV</string>
    <string name="abp_ananda">ABP ANANDA</string>
    <string name="fox_news">FOX NEWS</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_news">Web News</string>
    <string name="fox">FOX NEWS</string>
    <string name="sky_news">SKY NEWS</string>
    <string name="sky">SkY NEWS</string>
    <string name="times_now">Times Now</string>
    <string name="times">Times Now</string>


</resources>