<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.webnews.ui.BBC.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.webnews.ui.NDTV.GalleryFragment"
        android:label="@string/ndtv"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.webnews.ui.ABP.SlideshowFragment"
        android:label="@string/abp_ananda"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxNewsFragment"
        android:name="com.example.webnews.Fregment.FoxNewsFragment"
        android:label="@string/fox"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/skyNewsFragment"
        android:name="com.example.webnews.Fregment.SkyNewsFragment"
        android:label="@string/sky"
        tools:layout="@layout/fragment_sky_news" />
    <fragment
        android:id="@+id/timesNowFragment"
        android:name="com.example.webnews.TimesNow"
        android:label="@string/times"
        tools:layout="@layout/fragment_times_now" />

</navigation>