<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <!--we dont want directly close this app thus because we write menu catagary-->
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ndtv"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/abp_ananda"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/foxNewsFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/fox_news"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/skyNewsFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sky_news"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/timesNowFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/times_now"
            android:menuCategory="secondary"/>
    </group>

    <item android:title="UpComing"
        android:menuCategory="secondary">


        <menu>

            <item

                android:id="@+id/ny"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="New York Times"
                android:menuCategory="secondary"/>


        </menu>


    </item>


</menu>